test/libsolidity/syntaxTests/freeFunctions/free_function_modifier.sol
function fun() someModifier {
}
// ----
// DeclarationError 7920: (15-27): Identifier not found or not unique.
